[tool.poetry]
name = "streamlit-email-message-improver"
version = "0.1.0"
description = ""
authors = ["Naren"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.9"
streamlit = "^1.37.0"
langchain = "^0.2.11"
langchain-openai = "^0.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
